--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "wadla3",
   "version": "0.1.0",
-  "homepage": "http://wadla.in/",
+  "homepage": "https://wadla.in/",
   "private": true,
   "dependencies": {
+    "@react-spring/parallax": "^9.7.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
